# stm_clean

./: .cproject  .project  CMakeLists.txt  Makefile
Core/Inc/: main.h
Core/Src/: main.c
Debug/: clean_project.elf  clean_project.list  clean_project.map  makefile  objects.list  sources.mk
Debug/Core/Src/: main.d  main.su  subdir.mk  system_stm32f3xx.d
Debug/Drivers/STM32F3xx_HAL_Driver/Src/: stm32f3xx_hal_uart.d  stm32f3xx_hal_uart_ex.d  subdir.mk
Debug/Src/: subdir.mk
Debug/Startup/: subdir.mk
tests/: CMakeLists.txt  FirstTest.cpp
